# recitale

./: .coveragerc  .gitignore  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  requirements.txt  setup.cfg  tox.ini
.github/workflows/: devel.yml  release.yml
containers/: Dockerfile
docs/: build.rst  changelog.rst  configuration.rst  index.rst  install.rst  sections.rst
example/: settings-menu.yaml
prosopopee/: audio.py  cache.py  prosopopee.py  video.py
prosopopee/themes/exposure/templates/: index.html  opengraph.html
prosopopee/themes/exposure/templates/sections/: pictures-group.html
prosopopee/themes/light/templates/: index.html  opengraph.html
prosopopee/themes/light/templates/sections/: audio.html  pictures-group.html
prosopopee/themes/material/templates/: index.html
prosopopee/themes/material/templates/sections/: audio.html  full-picture.html  pictures-group.html
recitale/: audio.py  autogen.py  cache.py  image.py  recitale.py  utils.py  video.py
recitale/themes/exposure/static/css/: style-page.css
recitale/themes/exposure/templates/: base.html  example.html  footer.html  form.html  gallery-index.html  index.html  page-example.html  share.html
recitale/themes/exposure/templates/sections/: author.html  (+4 more)
recitale/themes/light/templates/: example.html  footer.html  form.html  gallery-index.html  index.html  page-example.html  share.html
recitale/themes/material/templates/: footer.html  form.html  index.html  opengraph.html  share.html
test/: test_audio.py  test_autogen.py  test_cache.py  test_image.py  test_utils.py  test_video.py
(+6 files in other folders)
