[metadata]
name = recitale
version = attr: recitale.__version__
description = A static website generator that allows you to tell a story with your pictures
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/recitale/recitale
license = GPL-3.0-or-later
license_files = LICENSE
classifiers =
	Development Status :: 3 - Alpha
	Environment :: Console
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Programming Language :: Python :: 3 :: Only
author = Quentin Schulz
author_email = foss+recitale@0leil.net

[options]
packages = recitale
# Rely on MANIFEST.in for package data listing
include_package_data = True
python_requires = >= 3.0
install_requires =
	Babel
	future
	imagesize
	jinja2
	path.py
	pillow >= 6
	pycryptodomex
	ruamel.yaml
	tqdm

[options.extras_require]
tests = pytest; pytest-cov

[options.entry_points]
console_scripts =
	recitale = recitale.recitale:main
